examples/fail/parser/missing_closing_brace.bina
// EXPECT_PARSER_ERROR: expected '}'
fn main() -> int {
    let x = 1;
    return x;
